[project]
name = "tng-sky-map"
version = "1.0.0"
description = "HEALPix sky map of 26 years of TNG telescope observations, colored by instrument"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jose Miguel Ibañez"}]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyvo>=1.5",
    "healpy>=1.16",
]

[project.scripts]
tng-sky-map = "tng_sky_map:main"
